--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -31,6 +31,54 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="figura figura1">
+      <img src="%PUBLIC_URL%/figuras/1.png" />
+    </div>
+    <div class="figura figura2">
+      <img src="%PUBLIC_URL%/figuras/2.png" />
+    </div>
+    <div class="figura figura3">
+      <img src="%PUBLIC_URL%/figuras/3.png" />
+    </div>
+    <div class="figura figura4">
+      <img src="%PUBLIC_URL%/figuras/4.png" />
+    </div>
+    <div class="figura figura5">
+      <img src="%PUBLIC_URL%/figuras/5.png" />
+    </div>
+    <div class="figura figura6">
+      <img src="%PUBLIC_URL%/figuras/6.png" />
+    </div>
+    <div class="figura figura7">
+      <img src="%PUBLIC_URL%/figuras/7.png" />
+    </div>
+    <div class="figura figura8">
+      <img src="%PUBLIC_URL%/figuras/8.png" />
+    </div>
+    <div class="figura figura9">
+      <img src="%PUBLIC_URL%/figuras/9.png" />
+    </div>
+    <div class="figura figura10">
+      <img src="%PUBLIC_URL%/figuras/10.png" />
+    </div>
+    <div class="figura figura11">
+      <img src="%PUBLIC_URL%/figuras/11.png" />
+    </div>
+    <div class="figura figura12">
+      <img src="%PUBLIC_URL%/figuras/12.png" />
+    </div>
+    <div class="figura figura13">
+      <img src="%PUBLIC_URL%/figuras/13.png" />
+    </div>
+    <div class="figura figura14">
+      <img src="%PUBLIC_URL%/figuras/14.png" />
+    </div>
+    <div class="figura figura15">
+      <img src="%PUBLIC_URL%/figuras/15.png" />
+    </div>
+    <div class="figura figura16">
+      <img src="%PUBLIC_URL%/figuras/16.png" />
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
