--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Una web para Nutricionistas como tu"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap" rel="stylesheet">
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Estudiemos Nutrición</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Una web para Nutricionistas como tu" />
+  <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Estudiemos Nutrición</title>
+  <link rel="stylesheet" href="%PUBLIC_URL%/Figurethemes.css" />
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <div class="figuras-container">
     <div class="figura figura1">
       <img src="%PUBLIC_URL%/figuras/1.png" />
     </div>
@@ -79,15 +64,72 @@
     <div class="figura figura16">
       <img src="%PUBLIC_URL%/figuras/16.png" />
     </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Script para permutación aleatoria y zoom con scroll -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      // Arreglo con los nombres de las imágenes
+      const imageNames = Array.from({ length: 16 }, (_, i) => `${i + 1}.png`);
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+      // Selecciona todas las figuras
+      const figuras = document.querySelectorAll('.figura img');
+
+      // Mezcla las imágenes aleatoriamente
+      const shuffledImageNames = imageNames.sort(() => 0.5 - Math.random());
+
+      // Asigna las imágenes aleatorias a las figuras y aplica transformaciones
+      figuras.forEach((figura, index) => {
+        const imageName = shuffledImageNames[index];
+        figura.src = `%PUBLIC_URL%/figuras/${imageName}`;
+
+        // Aplica rotaciones específicas basadas en el nombre de la imagen
+        switch (imageName) {
+          case '13.png':
+            figura.parentElement.style.transform = 'rotate(-90deg)';
+            break;
+          case '3.png':
+            figura.parentElement.style.transform = 'rotate(-90deg)';
+            break;
+          case '5.png':
+            figura.parentElement.style.transform = 'rotate(-45deg)';
+            break;
+          // Añadir más casos según sea necesario
+          default:
+            // Aplica una rotación por defecto si es necesario
+            figura.parentElement.style.transform = 'rotate(0deg)';
+        }
+
+        // Aplica una escala aleatoria entre 96% y 120%
+        const minScale = 1;
+        const maxScale = 1.25;
+        const randomScale = Math.random() * (maxScale - minScale) + minScale;
+        figura.parentElement.style.transform += ` scale(${randomScale})`;
+      });
+
+      // Variables para el zoom
+      let zoomLevel = 1;
+      const zoomStep = 0.1; // Ajusta el paso del zoom
+      const minZoom = 0.8; // Escala mínima (80%)
+      const maxZoom = 2;   // Escala máxima (200%)
+
+      // Función para actualizar la escala
+      const updateZoom = (delta) => {
+        zoomLevel += delta * zoomStep;
+        zoomLevel = Math.max(minZoom, Math.min(maxZoom, zoomLevel)); // Limita el rango de zoom
+        figuras.forEach(figura => {
+          // Ajusta la escala basada en el zoom
+          figura.style.transform = `scale(${zoomLevel})`;
+        });
+      };
+
+      // Evento de scroll para zoom
+      document.addEventListener('wheel', (event) => {
+        const delta = event.deltaY < 0 ? 1 : -1; // Detecta la dirección del scroll
+        updateZoom(delta);
+        event.preventDefault(); // Previene el desplazamiento de la página
+      });
+    });
+  </script>
+</body>
 </html>
